# img-toolkit-rust

./: Cargo.toml  LICENSE  README.md  package.json
pkg/: img_toolkit_rust.d.ts  img_toolkit_rust.js  img_toolkit_rust_bg.wasm  img_toolkit_rust_bg.wasm.d.ts  package.json
src/: lib.rs
ts-wrapper/: resizeImage.ts
