[package]
name = "img-toolkit-rust"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
image = "0.25.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]